LittleJava/src/raw/LittleJava.java
/* Generated By:JJTree&JavaCC: Do not edit this line. LittleJava.java */
package raw;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;

public class LittleJava/*@bgen(jjtree)*/implements LittleJavaTreeConstants, LittleJavaConstants {/*@bgen(jjtree)*/
  protected JJTLittleJavaState jjtree = new JJTLittleJavaState();
  /** Main entry point. */
  public static void main(String args[]) throws IOException {
        FileInputStream fis = null;
        try{
                fis = new FileInputStream("./sample/first.java");
                LittleJava parser = new LittleJava(fis);
                ASTStart n = parser.Start();
                n.dump("");
                System.out.println("Thank you.");
                fis.close();
        }
        catch (FileNotFoundException e){
                if (fis != null){
                        fis.close();
                }
        }
        catch( Exception e){
                System.out.println("Oops.");
                System.out.println(e.getMessage());
                e.printStackTrace();
        }
        return;
  }

/** Main production. */
  final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        ClassDecl();
      }
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
                                      if (jjtc000) {
                                        jjtree.clearNodeScope(jjtn000);
                                        jjtc000 = false;
                                      } else {
                                        jjtree.popNode();
                                      }
                                      if (jjte000 instanceof RuntimeException) {
                                        {if (true) throw (RuntimeException)jjte000;}
                                      }
                                      if (jjte000 instanceof ParseException) {
                                        {if (true) throw (ParseException)jjte000;}
                                      }
                                      {if (true) throw (Error)jjte000;}
    } finally {
                                      if (jjtc000) {
                                        jjtree.closeNodeScope(jjtn000, true);
                                      }
    }
    throw new Error("Missing return statement in function");
  }

/*void ImportSection(): {}
{
}*/
  final public void ClassDecl() throws ParseException {
 /*@bgen(jjtree) ClassDecl */
        ASTClassDecl jjtn000 = new ASTClassDecl(JJTCLASSDECL);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(CLASS);
      t = jj_consume_token(IDENTIFIER);
                                   jjtn000.SetValue(t.image);
      jj_consume_token(32);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC:
        case PRIMITIVE_TYPE:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        if (jj_2_1(5)) {
          MemberVariableDeclaration();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STATIC:
          case PRIMITIVE_TYPE:
          case IDENTIFIER:
            MemberFunctionDeclaration();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(35);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void MemberVariableDeclaration() throws ParseException {
                                    /*@bgen(jjtree) MemberVariableDeclaration */
        ASTMemberVariableDeclaration jjtn000 = new ASTMemberVariableDeclaration(JJTMEMBERVARIABLEDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
        jj_consume_token(STATIC);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      Type();
      t = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        jj_consume_token(34);
        Expr();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(33);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.SetValue(t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void MemberFunctionDeclaration() throws ParseException {
                                    /*@bgen(jjtree) MemberFunctionDeclaration */
        ASTMemberFunctionDeclaration jjtn000 = new ASTMemberFunctionDeclaration(JJTMEMBERFUNCTIONDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC:
        jj_consume_token(STATIC);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
                       ASTReturnType jjtn001 = new ASTReturnType(JJTRETURNTYPE);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
        Type();
      } catch (Throwable jjte001) {
                       if (jjtc001) {
                         jjtree.clearNodeScope(jjtn001);
                         jjtc001 = false;
                       } else {
                         jjtree.popNode();
                       }
                       if (jjte001 instanceof RuntimeException) {
                         {if (true) throw (RuntimeException)jjte001;}
                       }
                       if (jjte001 instanceof ParseException) {
                         {if (true) throw (ParseException)jjte001;}
                       }
                       {if (true) throw (Error)jjte001;}
      } finally {
                       if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001, true);
                       }
      }
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(36);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIMITIVE_TYPE:
      case IDENTIFIER:
        ParameterList();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(37);
      jj_consume_token(32);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BREAK:
        case CONTINUE:
        case FALSE:
        case FOR:
        case IF:
        case RETURN:
        case TRUE:
        case WHILE:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case PRIMITIVE_TYPE:
        case IDENTIFIER:
        case 32:
        case 36:
        case 49:
        case 53:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        Statement();
      }
      jj_consume_token(35);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.SetValue(t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Type() throws ParseException {
 /*@bgen(jjtree) Type */
        ASTType jjtn000 = new ASTType(JJTTYPE);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        String s = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIMITIVE_TYPE:
        t = jj_consume_token(PRIMITIVE_TYPE);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 38:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_4;
          }
          jj_consume_token(38);
          jj_consume_token(39);
                                           s += "[]";
        }
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 38:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(38);
          jj_consume_token(39);
                                                                                            s += "[]";
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.SetValue(t.image + s);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      jj_consume_token(32);
      BlockStatement();
      jj_consume_token(35);
      break;
    case RETURN:
          ASTReturnStatement jjtn001 = new ASTReturnStatement(JJTRETURNSTATEMENT);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RETURN);
        Expr();
        jj_consume_token(33);
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
          }
      }
      break;
    case BREAK:
          ASTBreakStatement jjtn002 = new ASTBreakStatement(JJTBREAKSTATEMENT);
          boolean jjtc002 = true;
          jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(BREAK);
        jj_consume_token(33);
      } finally {
          if (jjtc002) {
            jjtree.closeNodeScope(jjtn002, true);
          }
      }
      break;
    case CONTINUE:
          ASTContinueStatement jjtn003 = new ASTContinueStatement(JJTCONTINUESTATEMENT);
          boolean jjtc003 = true;
          jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(CONTINUE);
        jj_consume_token(33);
      } finally {
          if (jjtc003) {
            jjtree.closeNodeScope(jjtn003, true);
          }
      }
      break;
    case FALSE:
    case TRUE:
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case PRIMITIVE_TYPE:
    case IDENTIFIER:
    case 36:
    case 49:
    case 53:
      ExpressionDeclaration();
      jj_consume_token(33);
      break;
    case IF:
      IfStatement();
      break;
    case WHILE:
      WhileStatement();
      break;
    case FOR:
      ForStatement();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void BlockStatement() throws ParseException {
                        /*@bgen(jjtree) BlockStatement */
  ASTBlockStatement jjtn000 = new ASTBlockStatement(JJTBLOCKSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BREAK:
        case CONTINUE:
        case FALSE:
        case FOR:
        case IF:
        case RETURN:
        case TRUE:
        case WHILE:
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case PRIMITIVE_TYPE:
        case IDENTIFIER:
        case 32:
        case 36:
        case 49:
        case 53:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ExpressionDeclaration() throws ParseException {
    if (jj_2_2(2)) {
      Expr();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRIMITIVE_TYPE:
      case IDENTIFIER:
        LocalVariableDeclaration();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void LocalVariableDeclaration() throws ParseException {
                                  /*@bgen(jjtree) LocalVariableDeclaration */
        ASTLocalVariableDeclaration jjtn000 = new ASTLocalVariableDeclaration(JJTLOCALVARIABLEDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
    try {
      Type();
      t = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        jj_consume_token(34);
        Expr();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          jjtn000.SetValue(t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void IfStatement() throws ParseException {
                     /*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(36);
                   ASTIfConditionSection jjtn001 = new ASTIfConditionSection(JJTIFCONDITIONSECTION);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        Expr();
      } catch (Throwable jjte001) {
                   if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
                   if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001, true);
                   }
      }
      jj_consume_token(37);
                                                    ASTIfExecuteSection jjtn002 = new ASTIfExecuteSection(JJTIFEXECUTESECTION);
                                                    boolean jjtc002 = true;
                                                    jjtree.openNodeScope(jjtn002);
      try {
        Statement();
      } catch (Throwable jjte002) {
                                                    if (jjtc002) {
                                                      jjtree.clearNodeScope(jjtn002);
                                                      jjtc002 = false;
                                                    } else {
                                                      jjtree.popNode();
                                                    }
                                                    if (jjte002 instanceof RuntimeException) {
                                                      {if (true) throw (RuntimeException)jjte002;}
                                                    }
                                                    if (jjte002 instanceof ParseException) {
                                                      {if (true) throw (ParseException)jjte002;}
                                                    }
                                                    {if (true) throw (Error)jjte002;}
      } finally {
                                                    if (jjtc002) {
                                                      jjtree.closeNodeScope(jjtn002, true);
                                                    }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
                                                                                                          ASTIfElseSection jjtn003 = new ASTIfElseSection(JJTIFELSESECTION);
                                                                                                          boolean jjtc003 = true;
                                                                                                          jjtree.openNodeScope(jjtn003);
        try {
          Statement();
        } catch (Throwable jjte003) {
                                                                                                          if (jjtc003) {
                                                                                                            jjtree.clearNodeScope(jjtn003);
                                                                                                            jjtc003 = false;
                                                                                                          } else {
                                                                                                            jjtree.popNode();
                                                                                                          }
                                                                                                          if (jjte003 instanceof RuntimeException) {
                                                                                                            {if (true) throw (RuntimeException)jjte003;}
                                                                                                          }
                                                                                                          if (jjte003 instanceof ParseException) {
                                                                                                            {if (true) throw (ParseException)jjte003;}
                                                                                                          }
                                                                                                          {if (true) throw (Error)jjte003;}
        } finally {
                                                                                                          if (jjtc003) {
                                                                                                            jjtree.closeNodeScope(jjtn003, true);
                                                                                                          }
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void WhileStatement() throws ParseException {
                        /*@bgen(jjtree) WhileStatement */
  ASTWhileStatement jjtn000 = new ASTWhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(36);
      Expr();
      jj_consume_token(37);
      Statement();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
